pod.yml
apiVersion : v1
kind: Pod
metadata:
  name   : web_1
  labels :
    owner: Alex
spec:
  containers:
    - name: apache
      image: httpd-latest
      ports:
        -containerPort: 80
